# task-monitoreeng

./: .gitignore  Cargo.toml
src/: main.rs  state.rs
src/api/: dialog.rs  favorites.rs  mod.rs  services.rs  system.rs  workspaces.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
static/: app.js  index.html  style.css
static/js/: charts.js  favorites.js  logs.js  system.js  ui.js  workspaces.js
